--- a/category-desktop-support-utility-tools.html
+++ b/category-desktop-support-utility-tools.html
@@ -106,7 +106,7 @@ Windows 10 PRO x86/x64 ISO:
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -174,7 +174,7 @@ Windows 8.1 Pro VL x64 ISO:
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -240,7 +240,7 @@ Windows 7 PRO SP1 x64 ISO:
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -310,7 +310,7 @@ Windows 7 SP1 All-In-One x86/x64 ISO:
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -386,7 +386,7 @@ Kali Linux 2019.1 also includes updated packages for theHarvester, DBeaver, and 
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -468,7 +468,7 @@ Linux Mint 19.1 - Xfce<br/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -527,7 +527,7 @@ Ubuntu 18.10 ISO:
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -579,7 +579,7 @@ macOS Mojave DMG:
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -634,7 +634,7 @@ Android Oreo ISO:
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -733,7 +733,7 @@ It is also known as the Office 2010 Toolkit and EZ-Activator over the internet. 
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -794,7 +794,7 @@ KMS activation only lasts for 180 days after which, it must be activated again. 
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -866,7 +866,7 @@ Activating Windows and Microsoft Office with Windows Loader<BR/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -932,7 +932,7 @@ It can be especially useful for cases where:<BR/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -999,7 +999,7 @@ New Features Include: <BR/>Convert system disk between MBR and GPT styles. Windo
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -1039,7 +1039,7 @@ Having problems with your DirectX setup? We provide DirectX offline installers f
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -1147,7 +1147,7 @@ Having problems with your DirectX setup? We provide DirectX offline installers f
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -1211,7 +1211,7 @@ Don't really know what can go wrong on the web? You don't have to. Chrome automa
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -1280,7 +1280,7 @@ The best Firefox ever
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -1333,7 +1333,7 @@ Malicious websites are blocked before harming the computer thanks to the SmartSc
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -1408,7 +1408,7 @@ Since the browser was originally built for mobile devices, there is also a minia
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -1474,7 +1474,7 @@ CSS rendering and 2D graphics load faster, while scrolling is smoother. HTML5 me
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -1556,7 +1556,7 @@ Adobe Bundle include:
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -1622,7 +1622,7 @@ Adobe Bundle include:
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -1667,7 +1667,7 @@ KM Player 32/64bit:
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -1730,7 +1730,7 @@ High compression ratio in 7z format with LZMA and LZMA2 compression<br/>
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
@@ -1783,7 +1783,7 @@ Notepad ++ 32/64bit:
 <b>Terms of Service</b><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
-<li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+<li/>Any feedback/queries: <a href="link-error.html" target="_blank"><i class="fa fa-facebook"></i></a></li>
 <li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
