--- a/category-mobile-tech-support-utility-tools.html
+++ b/category-mobile-tech-support-utility-tools.html
@@ -93,7 +93,7 @@
 	<div class="modal-body">
 	<img src="images/icons/generic-Android-app-icon-384x384.png" width="40%" class="img-modal"> <br/><br/>
     <p class="modal-h">Google Account Managers</p>
-    <p class="modal-p"><BR/>Direct Links<BR/><br/>
+    <p class="modal-p"><BR/>Direct links<BR/><br/>
 	
 	Android Versions:<br/>
 	<b>⇒</b> Oreo 8.X.X  [DOWNLOAD]<a href="https://techeligible.com/Download/Google-Account-Manager-8.1.apk" target="_blank">
@@ -160,7 +160,7 @@
 	<div class="modal-body">
 	<img src="images/icons/FRP BypaSS-EvilGeniuS.png" width="40%" class="img-modal"> <br/><br/>
     <p class="modal-h">FRP Bypass APKs</p>
-    <p class="modal-p"><BR/>Direct Links<BR/><br/>
+    <p class="modal-p"><BR/>Direct links<BR/><br/>
 	
 	
 	<b>⇒</b> Quick Shortcut Maker 2.4.0 [DOWNLOAD]<a href="https://techeligible.com/Download/Quick%20Shortcut%20Maker%202.4.0.apk" target="_blank">
@@ -351,7 +351,7 @@
 	<div class="modal-body">
 	<img src="images/icons/tech-clipart-computer-repair-shop-792390-173552.png" width="40%" class="img-modal"> <br/><br/>
     <p class="modal-h">PC FRP Tools</p>
-    <p class="modal-p"><BR/>Direct Links<BR/><br/>
+    <p class="modal-p"><BR/>Direct links<BR/><br/>
 	
 	
 	<b>⇒</b> FRP HiJacker V1.0 [DOWNLOAD]<a href="https://mega.nz/#!VV5SVYqa!oXlbZ6MXi7Q-SnPHjU4R8_J7Gq34eJbUvqIbueIqSPw" target="_blank">
@@ -580,7 +580,7 @@ This application uses analytics software to collect and aggregate statistics to 
 	
 	<b>Begin downloading</b><br/>
 GeniuXMusic APK <b>11.5MB</b> <br/>
-	Mega.NZ: <a href="https://github.com/theevilgeniux/myModifiedApps/raw/master/GeniuXMusic.apk" target="_blank"> <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="download" class="svg-inline--fa fa-download fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"></path></svg></a>
+Direct link: <a href="https://github.com/theevilgeniux/myModifiedApps/raw/master/GeniuXMusic.apk" target="_blank"> <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="download" class="svg-inline--fa fa-download fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"></path></svg></a>
 
 	
 	<br/><br>
@@ -643,7 +643,7 @@ Share files whenever & wherever!<br><br>
 	
 	<b>Begin downloading</b><br/>
 XHAREit	 v3.8.18 APK: <b>6.5MB</b> <br/>
-	Mega.NZ: <a href="https://github.com/theevilgeniux/myModifiedApps/raw/master/XHAREit.apk" target="_blank"> <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="download" class="svg-inline--fa fa-download fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"></path></svg></a>
+	Direct link: <a href="https://github.com/theevilgeniux/myModifiedApps/raw/master/XHAREit.apk" target="_blank"> <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="download" class="svg-inline--fa fa-download fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"></path></svg></a>
 
 	
 	<br/><br>
@@ -707,7 +707,7 @@ There are many sites providing modified version of root explorer that can cause 
 <br/><br/>
 	<b>Begin downloading</b><br/>
 RootXplore Modded 4.2.1 APK: <b>3.7MB</b> <br/>
-	Mega.NZ: <a href="https://github.com/theevilgeniux/myModifiedApps/raw/master/RootXplore.apk" target="_blank"> <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="download" class="svg-inline--fa fa-download fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"></path></svg></a>
+	Direct link: <a href="https://github.com/theevilgeniux/myModifiedApps/raw/master/RootXplore.apk" target="_blank"> <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="download" class="svg-inline--fa fa-download fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"></path></svg></a>
 
 	
 	<br/><br>
