--- a/category-mobile-tech-support-utility-tools.html
+++ b/category-mobile-tech-support-utility-tools.html
@@ -78,10 +78,13 @@
     <div class="modal-content">
     <div class="modal-header"><h2>Download dialog</h2><span class="close">&times;</span></div>
 	<div class="modal-body">
+
 	<img src="images/icons/GeniuXMusic.png" width="40%" class="img-modal"> <br/><br/>
+
     <p class="modal-h">GeniuXMusic</p>
     <p class="modal-p">Version: 4.2.1<BR/>
 	Modded and Cracked by : Geniux <br/><br/>
+			<center><img src="images/download-geniux-music-player.jpg" width="100%" class="img-modal-screenshot"></center><br/>
 The Music application from Sony makes listening to your music files a wonderful experience. Import your music, arrange in playlists and just listen and enjoy. We optimize the sound and restrict the power used, so you can listen for as long as you want.
 <br/><br/>
 The Music application is only compatible with Xperia devices.<br/>
