--- a/category-mobile-tech-support-utility-tools.html
+++ b/category-mobile-tech-support-utility-tools.html
@@ -87,7 +87,7 @@
 			<center><img src="images/download-geniux-music-player.jpg" width="100%" class="img-modal-screenshot"></center><br/>
 The Music application from Sony makes listening to your music files a wonderful experience. Import your music, arrange in playlists and just listen and enjoy. We optimize the sound and restrict the power used, so you can listen for as long as you want.
 <br/><br/>
-The Music application is only compatible with Xperia devices.<br/>
+The Music application is compatible with all android versions.<br/>
 
 This application uses analytics software to collect and aggregate statistics to help us improve this app and our services. None of this data can be used to identify you.<br/><br/>
 	
