--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
+<meta property="og:image" content="images/geniux-evilgeniux.jpg">
+<meta name="description" content="Geniux is a website to get the updated information included with your computer tips and tricks, Mobile Secret codes, Internet and windows troubleshooting. This website for educational purposes.">
+ <meta name="keywords" content="Tips, Tweaks, Tricks, Desktop, Mobile, Geniux, Evil Geniux, Evidence Maphutha">
+ <meta name="author" content="Evidence Maphutha">
+
 <title>Geniux - Home</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
