--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
 <head>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
-<meta property="og:image" content="images/geniux-evilgeniux.jpg">
-<meta name="description" content="Geniux is a website to get the updated information included with your computer tips and tricks, Mobile Secret codes, Internet and windows troubleshooting. This website for educational purposes.">
- <meta name="keywords" content="Tips, Tweaks, Tricks, Desktop, Mobile, Geniux, Evil Geniux, Evidence Maphutha">
- <meta name="author" content="Evidence Maphutha">
-
+<meta property="og:image" content="images/Geniux-Logo.jpg">
 <title>Geniux - Home</title>
+<title>Geniux</title>
+<meta name="title" content="Geniux">
+<meta name="description" content="Geniux is a website/place to get the information included with your computer tips and tricks, Mobile tweaks, Internet and windows troubleshooting.">
+ <meta name="keywords" content="Technology, Web Development, Internet, Web">
+ <meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Geniux">
+<meta property="og:description" content="Geniux is a website/place to get the information included with your computer tips and tricks, Mobile tweaks, Internet and windows troubleshooting.">
+<meta property="twitter:title" content="Geniux">
+<meta property="twitter:description" content="Geniux is a website/place to get the information included with your computer tips and tricks, Mobile tweaks, Internet and windows troubleshooting.">
+<meta property="twitter:image" content="images/Geniux-Logo.jpg">
+	
+	<meta name="author" content="Evidence Maphutha">
+	
+	
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
