--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
-<meta property="og:image" content="images/Geniux-Logo.jpg">
+<meta property="og:image" content="images/Geniux-Logo-Wallpaper.jpg">
 <title>Geniux - Home</title>
 <title>Geniux</title>
 <meta name="title" content="Geniux">
