updated meta tags

--- a/category-mobile-tech-support-utility-tools.html
+++ b/category-mobile-tech-support-utility-tools.html
@@ -3,7 +3,22 @@
 <head>
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <meta charset="utf-8">
+<meta property="og:image" content="images/myModifiedApps1.png">
 <title>Mobile Tech - Utilities</title>
+<meta name="title" content="Geniux - Modified Apps">
+<meta name="description" content="With the use of APKTool. I reverse engineer APK files to decode resource files so I can modify them and then recompile the application.">
+ <meta name="keywords" content="Geniux, theevilgeniux, Evidence Maphutha, Android, Technology, Web Development, Internet, Web">
+ <meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Geniux - Modified Apps">
+<meta property="og:description" content="With the use of APKTool. I reverse engineer APK files to decode resource files so I can modify them and then recompile the application.">
+<meta property="twitter:title" content="Geniux - Modified Apps">
+<meta property="twitter:description" content="With the use of APKTool. I reverse engineer APK files to decode resource files so I can modify them and then recompile the application.">
+<meta property="twitter:image" content="images/myModifiedApps1.png">
+	
+	<meta name="author" content="Evidence Maphutha">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
