--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 <meta charset="utf-8">
 <meta property="og:image" content="images/Geniux-Logo-Wallpaper.jpg">
 <title>Geniux - Home</title>
-<title>Geniux</title>
 <meta name="title" content="Geniux">
 <meta name="description" content="Geniux is a website/place to get the information included with your computer tips and tricks, Mobile tweaks, Internet and windows troubleshooting.">
- <meta name="keywords" content="Technology, Web Development, Internet, Web">
+ <meta name="keywords" content="Geniux, theevilgeniux, Evidence Maphutha, Technology, Web Development, Internet, Web">
  <meta name="robots" content="index, follow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="language" content="English">
