--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Geniux - Home</title>
 <meta name="title" content="Geniux">
 <meta name="description" content="Geniux is a website/place to get the information included with your computer tips and tricks, Mobile tweaks, Internet and windows troubleshooting.">
- <meta name="keywords" content="Geniux, theevilgeniux, Evidence Maphutha, Technology, Web Development, Internet, Web">
+ <meta name="keywords" content="Geniux, theevilgeniux, Evidence Maphutha, Android, Technology, Web Development, Internet, Web">
  <meta name="robots" content="index, follow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="language" content="English">
