--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </style>
 
 
-
+<script data-ad-client="ca-pub-5686710024858187" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 
 
